# x-video-player

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  main.cpp
app/asset/: .gitignore
app/include/: widget.h
app/src/: main.cpp  widget.cpp  widget.h  widget.ui  x_video_widget.cpp  x_video_widget.h
app/ui/: widget.cpp
cmake/: Qt.cmake  spdlog.cmake
dep/: FFmpeg.cmake
include/: x_log.h
src/: CMakeLists.txt  x_log.cpp
tests/: .gitignore  CMakeLists.txt  decode_test.cpp  demux_copy_parameter_test.cpp  demux_open_test.cpp  demux_pack_test.cpp  demux_test.cpp  ffmpeg_context_test.cpp  ffmpeg_decode_test.cpp  ffmpeg_install_test.cpp  ffmpeg_test.cpp  ffmpeg_transform.cpp  logger_test.cpp
tests/asset/: .gitignore
x_video_player/: CMakeLists.txt
x_video_player/src/: pch.h  x.h
x_video_player/src/x/: av_type.h  decode.cpp  decode.h  demux.cpp  demux.h  ffmpeg_raii.h  ffmpeg_utils.cpp  ffmpeg_utils.h  x_log.cpp  x_log.h
